# mini-compilers

./: README.md  syntax_parser.py
Parser-C/: CMakeLists.txt  grammar.txt  header_obj.c  header_obj.h  main.c  obj_string.h  out.txt  parser.c  parser.h  source.txt  utils.c  utils.h
